unpackaged/main/default/objects/Contact_Email__c/fields/Convio_Constituent_ID__c.field-meta.xml
<CustomField>
    <fullName>Convio_Constituent_ID__c</fullName>
    <description>Constituent ID of the corresponding Convio record</description>
    <inlineHelpText>Constituent ID of the corresponding Convio record</inlineHelpText>
    <label>Convio Constituent ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>