unpackaged/main/default/objects/Contact_Email__c/fields/Donor__c.field-meta.xml
<CustomField>
    <fullName>Donor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Emails</relationshipLabel>
    <relationshipName>Contact_Emails</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>