unpackaged/main/default/objects/Contact_Email__c/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <description>deprecating this field as of 1/5/23 per FB-2331</description>
    <label>Extension_DEL</label>
    <length>10</length>
    <type>Text</type>
</CustomField>