unpackaged/main/default/objects/Contact_Email__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whichever email is selected as OP gets stamped onto the standard email fields.</description>
    <inlineHelpText>The primary, active email for this contact. Each contact can only have one Overall Preferred email.</inlineHelpText>
    <label>Overall Preferred</label>
    <type>Checkbox</type>
</CustomField>