unpackaged/main/default/objects/Contact_Email__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <label>Remark</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>