unpackaged/main/default/objects/Contact_Email__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of email on record.</description>
    <inlineHelpText>A Preferred status indicates it's the best email of that type and will get copied to the Contact record. Each Contact can only have 1 Preferred email for each type (eg 1 Preferred work, 1 Preferred personal). Deliverable indicates it's an active email but not preferred for its type. Undeliverable indicates the email isn't valid.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preferred</fullName>
                <default>true</default>
                <label>Preferred</label>
            </value>
            <value>
                <fullName>Deliverable</fullName>
            </value>
            <value>
                <fullName>Undeliverable</fullName>
            </value>
            <value>
                <fullName>Current</fullName>
                <isActive>false</isActive>
                <label>Current</label>
            </value>
            <value>
                <fullName>Former</fullName>
                <isActive>false</isActive>
                <label>Former</label>
            </value>
            <value>
                <fullName>Former_Archived</fullName>
                <isActive>false</isActive>
                <label>Former_Archived</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>