unpackaged/main/default/objects/Contact_Email__c/fields/Sys_Copied_to_Personal__c.field-meta.xml
<CustomField>
    <fullName>Sys_Copied_to_Personal__c</fullName>
    <description>Checks if email is equal to Personal Email on Contact record.</description>
    <formula>IF( Donor__r.npe01__HomeEmail__c = Email__c , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sys-Copied to Personal?</label>
    <type>Checkbox</type>
</CustomField>