unpackaged/main/default/objects/Contact_Email__c/fields/Sys_ID_from_Merged_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sys_ID_from_Merged_Contact__c</fullName>
    <description>Used by "Update Email on Contact Deletion" flow to store ID of losing Contact related to this record before it is moved to the winning Contact.</description>
    <label>Sys-ID from Merged Contact</label>
    <length>25</length>
    <type>Text</type>
</CustomField>