unpackaged/main/default/objects/Contact_Email__c/fields/Sys_Mod__c.field-meta.xml
<CustomField>
    <fullName>Sys_Mod__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates record modified by flow.</description>
    <label>Sys-Mod</label>
    <type>Checkbox</type>
</CustomField>