unpackaged/main/default/objects/Contact_Email__c/validationRules/Cannot_Create_Pref_If_No_OP.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Create_Pref_If_No_OP</fullName>
    <active>true</active>
    <description>Prevents creation of a Preferred Email record in no current OP exists.</description>
    <errorConditionFormula>TEXT (Status__c) = 'Preferred'
&amp;&amp; 
 Primary__c = FALSE
	&amp;&amp;
	 Is_Automation_Bypassed__c = FALSE
&amp;&amp;
Donor__r.Email =NULL
&amp;&amp; 
$Permission.Flow_Automations_Off = FALSE</errorConditionFormula>
    <errorMessage>You cannot create a Preferred email without making it Overall Preferred if no Overall Preferred currently exists.</errorMessage>
</ValidationRule>