unpackaged/main/default/objects/Contact_Email__c/validationRules/No_Edit_Email_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Edit_Email_Value</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Permission.Update_Email_or_Phone = FALSE,
NOT(ISNEW()),
ISCHANGED( Email__c )
)</errorConditionFormula>
    <errorMessage>You do not have permission to change the Email value on an existing Contact Email record. Please either create a new record with the updated email and mark this record Undeliverable, or submit a Request Case for this change.</errorMessage>
</ValidationRule>