unpackaged/main/default/objects/Contact_Email__c/validationRules/Not_Undeliverable_and_Primary_DEL.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Undeliverable_and_Primary_DEL</fullName>
    <active>false</active>
    <description>Prevents records from being marked Undeliverable and Primary.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, "Undeliverable"),  
  Primary__c  = TRUE)</errorConditionFormula>
    <errorMessage>A record cannot be Primary and have a Status of Undeliverable.</errorMessage>
</ValidationRule>