unpackaged/main/default/objects/Contact_Email__c/validationRules/Prevent_Contacts_with_Pref_CEs_but_no_OP.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Contacts_with_Pref_CEs_but_no_OP</fullName>
    <active>true</active>
    <description>Prevents user from changing a record from Overall Preferred TRUE to FALSE while leaving it Status=Preferred when there are no other Preferred CEs to make OP.</description>
    <errorConditionFormula>(PRIORVALUE(Primary__c) = TRUE &amp;&amp; Primary__c = FALSE) &amp;&amp;
TEXT (Status__c) = 'Preferred' &amp;&amp;
 Is_Automation_Bypassed__c = FALSE &amp;&amp; 
 $Permission.Flow_Automations_Off = FALSE &amp;&amp;
(
				(TEXT(Type__c) = 'Personal' &amp;&amp;  ISBLANK(Donor__r.npe01__WorkEmail__c) &amp;&amp; ISBLANK(  Donor__r.npe01__AlternateEmail__c)) ||
				(TEXT(Type__c) = 'Work' &amp;&amp;  ISBLANK(Donor__r.npe01__HomeEmail__c) &amp;&amp; ISBLANK(  Donor__r.npe01__AlternateEmail__c)) ||
				(OR(TEXT(Type__c) = 'Assistant', TEXT(Type__c) = 'Spouse', TEXT(Type__c) = 'Alternate') &amp;&amp;  ISBLANK(Donor__r.npe01__HomeEmail__c) &amp;&amp; ISBLANK(Donor__r.npe01__WorkEmail__c  ))
				)</errorConditionFormula>
    <errorMessage>You cannot remove Overall Preferred from a record while leaving Status=Preferred if there is no other Preferred Contact Email that can replace it.</errorMessage>
</ValidationRule>